fixed layout horizontal scrolling bugs

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,6 +11,16 @@ body {
   overflow-x: clip;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
+@media (prefers-reduced-motion: reduce) {
+  html {
+    scroll-behavior: auto;
+  }
+}
+
 .list-icon::before{
   content: '✔︎';
   padding: 0 10px 0 0;
